Issue #4. Renamed variables according to definition of done.

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
       <!-- Requires JS for upload functionality -->
     </div>
 
-    <!-- anchor-success div appears in main upon a successful document upload
+    <!-- anchorSuccess div appears in main upon a successful document upload
     to anchor div
-    <div id="anchor-success">
+    <div id="anchorSuccess">
       <h1>Upload Successful</h1>
       <p>
         Your document has been successfully uploaded, future attempts to
@@ -42,17 +42,17 @@
     </div>
     -->
 
-    <!-- validate-success div appears in main upon a succesful document upload
+    <!-- validateSuccess div appears in main upon a succesful document upload
     to validate div that results in a blockchain hit
-    <div id="validate-success">
+    <div id="validateSuccess">
       <h1>Document is Valid</h1>
       <p>Your document is valid</p>
     </div>
     -->
 
-    <!-- validate-failure div appears in main upon a succesful document upload
+    <!-- validateFailure div appears in main upon a succesful document upload
     to validate div that does not result in a blockchain hit
-    <div id="validate-failure">
+    <div id="validateFailure">
       <h1>Document is Invalid</h1>
       <p>
         Sorry, we couldn't validate your document. Your file may never have
@@ -62,7 +62,7 @@
     </div>
     -->
 
-    <div id="technology-explanation">
+    <div id="technologyExplanation">
       <h1>How it works</h1>
       <p>
         This validation system utilises the Hedera Hasgraph blockchain to
