Template React app works. Modified .gitignore. Updated Readme. #37

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
     crossorigin></script>
 
     <!-- Load React component. -->
-    <script src="/react-app.js"></script>
+    <script src="/react-scripts/react-app.js"></script>
 
   </body>
 
