--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,9 @@
 
   <div>
     <h1>PDF Upload</h1>
-    <form id="my-up-pdf" target="stop" method="POST" action="/uploadPdf" encType="multipart/form-data">
-      <input type="file" name="pdf" />
+    <form id="my-up-pdf" target="stop" method="POST" action="/api/upload" encType="multipart/form-data">
+      <input type="text" name="name" />
+      <input type="file" name="document" />
     </form>
     <iframe name="stop" style="display: none;"></iframe>
     <button onClick="document.querySelector('#my-up-pdf').submit();">upload</button>
