Fixed more linting by disabling undef

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
   <!-- Not sure what we want here just yet -->
   <footer>
   </footer>
-  <!-- Load axios, a supporting library for the React app -->
+  <!-- Load supporting libraries for react -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
   <!-- Load React. -->
   <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
