--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
 <head>
   <title>Blockchain Document Validator</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <!-- Load supporting libraries for react -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
+  <!-- Load React. -->
+  <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 </head>
 
 <body>
