--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,25 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Blockchain Document Validator</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <!-- Load supporting libraries for react -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
+  <!-- Load React. -->
+  <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <div id="root"></div>
+  <!-- Not sure what we want here just yet -->
+  <footer>
+  </footer>
+  <!-- Load React component. -->
+  <script src="/react-scripts/react-app.js"></script>
 </body>
 
 </html>
