All Integrations done

--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
                         <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                             <ul id="nav" class="navbar-nav me-auto">
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#features">How does it work?</a>
+                                    <a class="page-scroll" href="#how">How does it work?</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#download">FAQ</a>
+                                    <a class="page-scroll" href="#FAQ">FAQ</a>
                                 </li>
 
                             </ul>
@@ -69,9 +69,9 @@
                         <div class="hero-text">
                             <h5></h5>
                             <h1>Check the Integirty<br>of your documents with <br>the <strong>ANCHØR</strong> platform</h1>
-                            <p>Lorem Ipsum is simply dummy text of the
-                                printing and typesetting <br> industry. Lorem Ipsum has been the industry's standard
-                                <br>dummy text ever since.</p>
+                            <p>Anchor your documents with the most secure blockchains on the market
+                               <br> We set the industry standard for anchoring
+                                <br>The Worlds #1 Validator</p>
                             <div>
                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#anchormod">
                                   Anchør
@@ -97,7 +97,7 @@
 
 
     <section class="clients section">
-      <div class="container">
+      <div class="container" id="how">
           <div class="row">
               <div class="col-12">
                   <h1 class="text-center">How does it work?</h1>
@@ -112,7 +112,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-center">FAQ</h1>
+                <h1 class="text-center" id="FAQ">FAQ</h1>
         <h2 class="text-center mb-4">Frequently Asked Questions</h2>
 
         <div class="accordion w-100" id="basicAccordion">
